ECA-1721: Finalized initial conversion of LogSessionBean to EJB 3.0.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@9522 37aeb1de-b14b-0410-9a0e-82b28170d228